--- a/src/main/resources/com/enosistudio/fxstyleintellij/hello-view.fxml
+++ b/src/main/resources/com/enosistudio/fxstyleintellij/hello-view.fxml
@@ -5,45 +5,29 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.collections.FXCollections?>
-<?import java.lang.String?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuItem?>
 <BorderPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.enosistudio.fxstyleintellij.HelloController">
+
     <top>
         <MenuBar>
             <Menu text="File">
-                <MenuItem text="New"/>
-                <MenuItem text="Open"/>
+                <MenuItem text="File"/>
             </Menu>
-            <Menu text="Edit"/>
-            <Menu text="View"/>
         </MenuBar>
     </top>
 
     <center>
-        <VBox alignment="CENTER" spacing="20">
+        <VBox>
             <padding>
                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
             </padding>
 
             <Label fx:id="welcomeText"/>
             <Button text="Hello!" onAction="#onHelloButtonClick"/>
-            <TextField promptText="Enter your name"/>
-            <ComboBox promptText="Select an option">
-                <items>
-                    <FXCollections fx:factory="observableArrayList">
-                        <String fx:value="Option 1"/>
-                        <String fx:value="Option 2"/>
-                        <String fx:value="Option 3"/>
-                    </FXCollections>
-                </items>
-            </ComboBox>
         </VBox>
     </center>
 
