--- a/src/main/resources/com/enosistudio/fxstyleintellij/hello-view.fxml
+++ b/src/main/resources/com/enosistudio/fxstyleintellij/hello-view.fxml
@@ -9,6 +9,9 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.CheckMenuItem?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
 <BorderPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.enosistudio.fxstyleintellij.HelloController">
 
@@ -16,6 +19,9 @@
         <MenuBar>
             <Menu text="File">
                 <MenuItem text="File"/>
+            </Menu>
+            <Menu text="Debug">
+                <CheckMenuItem text="Enable DebugCss" onAction="#onDebugCss"/>
             </Menu>
         </MenuBar>
     </top>
@@ -26,8 +32,10 @@
                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
             </padding>
 
-            <Label fx:id="welcomeText"/>
-            <Button text="Hello!" onAction="#onHelloButtonClick"/>
+            <Button text="Choisir un fichier" onAction="#onChooseFile"/>
+            <TextField fx:id="fileLabel" editable="false"/>
+            <Separator/>
+            <Button text="Apply File" onAction="#onApplyStyle"/>
         </VBox>
     </center>
 
