--- a/src/main/resources/com/enosistudio/fxstyleintellij/hello-view.fxml
+++ b/src/main/resources/com/enosistudio/fxstyleintellij/hello-view.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
@@ -12,6 +11,9 @@
 <?import javafx.scene.control.CheckMenuItem?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.Tab?>
 <BorderPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.enosistudio.fxstyleintellij.HelloController">
 
@@ -27,16 +29,22 @@
     </top>
 
     <center>
-        <VBox>
-            <padding>
-                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-            </padding>
+        <ScrollPane>
+            <VBox>
+                <TabPane>
+                    <Tab text="pan1"/>
+                    <Tab text="pan2"/>
+                </TabPane>
+                <padding>
+                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                </padding>
 
-            <Button text="Choisir un fichier" onAction="#onChooseFile"/>
-            <TextField fx:id="fileLabel" editable="false"/>
-            <Separator/>
-            <Button text="Apply File" onAction="#onApplyStyle"/>
-        </VBox>
+                <Button text="Choisir un fichier" onAction="#onChooseFile"/>
+                <TextField fx:id="fileLabel" editable="false"/>
+                <Separator/>
+                <Button text="Apply File" onAction="#onApplyStyle"/>
+            </VBox>
+        </ScrollPane>
     </center>
 
 </BorderPane>
